<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/whybind"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputAlipay"
        android:inputType="textEmailAddress"
        android:maxLength="32"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/confirmAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="32"
        android:inputType="textEmailAddress"
        android:hint="@string/confirmAlipay"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e8e8e8"/>

</LinearLayout>