<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">
    
    <TextView
        android:id="@+id/recipient_head"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:textColor="#000000"
        android:text="@string/recipient2"/>

    <TextView
        android:id="@+id/recipient"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/recipient2"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/recipient_head"/>

    <TextView
        android:id="@+id/phone_head"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/recipient_head"
        android:text="@string/phonenumber"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/phonenumber"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/phone_head"
        android:layout_alignBottom="@+id/phone_head"/>

    <TextView
        android:id="@+id/address_head"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:text="@string/address"
        android:layout_below="@+id/phone"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/address_head"
        android:layout_alignTop="@+id/address_head"/>

</RelativeLayout>